_sass/layout.scss
// ----- BASE -----
body {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}
* {
  box-sizing:border-box;
}

// Top menu
header {
  display: flex;
  justify-content: space-between;
  nav {
    padding: 0.5em 1em;

    & > ul {
      display: flex;
      margin: 0;
      padding: 0;

      & > li {
        position: relative;

        & > a {
          position:relative;
        }
        .dropdown-menu {
          position: absolute;
          width: 22em;
        }
      }
    }
  }
}

// Pages
#content {
  width: 95vw;
  max-width: 1500px;
  margin: 0 auto;
  flex-grow: 1;
  display: flex;
  justify-content: space-between;

  &.home {
    flex-direction: column;
    //justify-content: flex-start;
  }
  article {
    width: 66%;

    p > img {
      max-width: 100%;
      display: block;
      margin: 1em auto;
    }
    .video {
      text-align: center;
    }
  }
  nav {
    width: 33%;

    ul#anchor-menu {
      position: fixed;
      width: 28%;
    }
  }
}

// ----- HOME -----

// Tabs device home
.ui-tabs {
  .ui-tabs-nav {
    display: flex;
    justify-content: space-between;
    margin: 0;
    padding: 0;
  
    li {
      list-style:none;
      flex-grow: 1;
    }
  }
  .ui-tabs-panel {
    display: flex;
  }
  .content-tab {
    display: flex;
    align-items: center;

    img {
      flex-shrink: 0;
      margin-right: 0.5em;
    }
    & > div {
      flex-grow: 1;
    }
  }
}
#sav {
  display: flex;
  margin-top: 1em;

  #faq-sav {
    //flex-grow: 2;
    width: 55%;
  }
  #choice-sav {
    //flex-grow: 1;
    width: 45%;
  }
}

@media screen and (max-width: 1200px) {
  #content {
    nav {
      font-size: 90%;
    }
  }
}
@media screen and (max-width: 800px) {
  #content {
    article {
      width: 100%
    }
    nav {
      display: none;
    }
  }
}

